# aiventure

./: .cursorrules  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Cargo.toml  DB_DESIGN.md  Makefile  PRD.md  README.md  ROADMAP.md  index.html  mkdocs.yml  objects.inv  package.json  pyproject.toml  sitemap.xml  test.py
.github/workflows/: ci-cd.yaml  publish.yaml
about/: index.html
api/root/: index.html
backend/: Cargo.toml
backend/config/: development.yaml  test.yaml
backend/src/: lib.rs
backend/tests/requests/: user.rs
changelog/: index.html
client/: main.py  pyproject.toml
concepts/: index.html
config/: development.yaml  test.yaml
contributing/: index.html
docs/: index.md  installation.md
docs/api/: root.md
examples/: playground.rs
frontend/: bun.lockb  components.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx
frontend/src/lib/: constants.ts  schema.ts  utils.ts  websocket.ts
frontend/src/lib/components/game/: GameSidebar.svelte  HomeView.svelte  InvestmentsView.svelte  LeaderboardView.svelte  MarketView.svelte  NumberTransition.svelte
frontend/src/lib/hooks/: useUser.ts
frontend/src/lib/stores/: animationStore.ts  gameStore.ts  playerStore.ts  userStore.ts  userStore.tsx
frontend/src/lib/types/: context.ts  websocket.ts
frontend/src/pages/: LandingPage.tsx  LoginPage.tsx  PlayPage.tsx  RegisterPage.tsx  VerifyPage.tsx
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/(auth)/login/: +page.svelte  +page.ts
frontend/src/routes/(auth)/register/: +page.svelte
frontend/src/routes/(auth)/verify/: +page.svelte
frontend/src/routes/auth/login/: +page.svelte
frontend/src/routes/auth/register/: +page.svelte  +page.ts
frontend/src/routes/play/: +layout.svelte  +page.svelte
installation/: index.html
migrations/: env.py
migrations/versions/: 2024_11_18_1901-9d6146e29abc_init.py
quickstart/: index.html
scripts/: client.py
search/: search_index.json
src/: app.rs
src/aiventure/: __init__.py  __main__.py  api.py  config.py  constants.py  dependencies.py  game_manager.py  gcmanager.py  models.py  utils.py
src/aiventure/db/: __init__.py  ai_model.py  base.py  lab.py  location.py  modifier.py  player.py  player_lab_investment_link.py  quality.py  role.py  user.py  utils.py
src/aiventure/models/: __init__.py  ai_model.py  core.py  employee.py  game.py  lab.py  links.py  location.py  modifier.py  player.py  quality.py  role.py  user.py
src/aiventure/router/: __init__.py  authentication.py  core.py  game.py  web.py
src/aiventure/router/v1/: __init__.py  endpoints.py
src/channels/: application.rs
src/controllers/: auth.rs
src/mailers/: auth.rs
src/mailers/auth/welcome/: html.t  subject.t
src/workers/: downloader.rs
tests/: __init__.py  test_main.py  test_pkg_files.py
tests/models/: users.rs
tests/requests/: auth.rs  notes.rs  prepare_data.rs  user.rs
tests/tasks/: seed.rs
usage/: index.html
